# denishell

./: .gitignore  AUTHORS  HACKING  Makefile.am  README  README.md  TODO  configure.ac
doc/: AST.dia  Doxfile  index.h
doc/examples/: example.dsh  pipe.c
src/: Makefile.am  deni-sh_i18n.h  lexer.c  lexer.h  main.c  runtime.c  runtime.h  sintactic.c  sintactic.h  sintactic_cat.c  sintactic_cat.h  sintactic_ls.c  sintactic_ls.h
